Using "canvas" tag

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naves Espaciales (GAME)</title>
+    <link rel="stylessheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <canvas id="my_canvas" width="700" height="600"></canvas>
+            <h3 class="barra"></h3>
+            <div>
+                <button class="div_left" id="reset_btn" style="background-color:#C00;">Reiniciar</button>
+                <button class="div_right" id="left_btn" style="background-color:#0C0;">Izquierda</button>
+                <button class="div_right" id="shoot_btn" style="background-color:#00C;">Disparar</button>
+                <button class="div_right" id="right_btn" style="background-color:#EE0;">Derecha</button>
+            </div>
+    </div>
 </body>
 </html>
